  pairs into a single character on UCS-2 builds.

- Issue #9757: memoryview objects get a release() method to release the
  underlying buffer (previously this was only done when deallocating the
  memoryview), and gain support for the context management protocol.

- Issue #9797: pystate.c wrongly assumed that zero couldn't be a valid
  thread-local storage key.

Library
-------

- logging: Enhanced HTTPHandler with secure and credentials initializers.

- Issue #767645: Set os.path.supports_unicode_filenames to True on Mac OS X
  (macpath module).

- Issue #9837: The read() method of ZipExtFile objects (as returned by
  ZipFile.open()) could return more bytes than requested.

- Issue #9826: OrderedDict.__repr__ can now handle self-referential
  values:   d['x'] = d.

- Issue #9825: Using __del__ in the definition of collections.OrderedDict made
  it possible for the user to create self-referencing ordered dictionaries
  which become permanently uncollectable GC garbage. Reinstated the Py3.1
  approach of using weakref proxies so that reference cycles never get created
  in the first place.

- Issue #9579, #9580: Fix os.confstr() for value longer than 255 bytes and
  encode the value with filesystem encoding and surrogateescape (instead of
  utf-8 in strict mode). Patch written by David Watson.

- Issue #9632: Remove sys.setfilesystemencoding() function: use
  PYTHONFSENCODING environment variable to set the filesystem encoding at
  Python startup. sys.setfilesystemencoding() creates inconsistencies because
  it is unable to reencode all filenames in all objects.

- Issue #9410: Various optimizations to the pickle module, leading to
  speedups up to 4x (depending on the benchmark).  Mostly ported from
  Unladen Swallow; initial patch by Alexandre Vassalotti.

- The pprint module now supports printing OrderedDicts in their given
  order (formerly, it would sort the keys).

- Logging: Added QueueHandler class to facilitate logging usage with
  multiprocessing.
